# matrixserver

./: CMakeLists.txt
MainMenu/: CMakeLists.txt  SoundEffect.cpp  SoundEffect.h  SoundSamples.inc  main.cpp  mainmenu.cpp  mainmenu.h
application/: ADS1000.cpp  BattSensor.h  CMakeLists.txt  CubeApplication.cpp  CubeApplication.h  Font6px.h  INA219.cpp  MatrixApplication.cpp  MatrixApplication.h  MatrixApplicationStandalone.cpp  Mpu6050.cpp  Mpu6050.h
common/: Color.cpp  IpcConnection.cpp  IpcConnection.h  Joystick.cpp  Joystick.h  SocketConnection.cpp  SocketConnection.h  UniversalConnection.h
common/protobuf/: matrixserver.proto
renderer/: CMakeLists.txt
renderer/RGBMatrixRenderer/: CMakeLists.txt  RGBMatrixRenderer.cpp
renderer/RGBMatrixRenderer/imu/: CMakeLists.txt
server/: CMakeLists.txt  Server.cpp  Server.h
server_RGBMatrix/: CMakeLists.txt  main.cpp
